refactor/image/ 더 이상 쓰이지 않는 변수 정리, 재사용 가능한 지역변수 전역변수화